[gd_scene load_steps=10 format=3 uid="uid://c5qdlyo63gd5t"]

[ext_resource type="Script" path="res://scenes/enemies/barnacle.gd" id="1_1dpm1"]
[ext_resource type="Texture2D" uid="uid://csjml5ib2jn7a" path="res://assets/placeholder/Tiles/tile_0069.png" id="1_jhya2"]
[ext_resource type="Texture2D" uid="uid://c7of1bkpaoqx5" path="res://assets/placeholder/Tiles/tile_0070.png" id="2_p48n8"]
[ext_resource type="Texture2D" uid="uid://dmy8ov8rvbe02" path="res://assets/placeholder/Tiles/tile_0062.png" id="5_eepxp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmf5u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8suxj"]
size = Vector2(8, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubtu3"]
size = Vector2(20, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvhlt"]
size = Vector2(100, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uifs6"]
size = Vector2(12, 20)

[node name="Barnacle" type="Node2D" groups=["barnacle", "enemies"]]
script = ExtResource("1_1dpm1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_p48n8")
flip_v = true

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2(0, 27)
node_a = NodePath("../rigids/RigidBody2D")
node_b = NodePath("../rigids/RigidBody2D2")

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2(0, 45)
node_a = NodePath("../rigids/RigidBody2D2")
node_b = NodePath("../rigids/RigidBody2D3")

[node name="PinJoint2D3" type="PinJoint2D" parent="."]
position = Vector2(0, 63)
node_a = NodePath("../rigids/RigidBody2D3")
node_b = NodePath("../rigids/RigidBody2D4")

[node name="PinJoint2D4" type="PinJoint2D" parent="."]
position = Vector2(0, 81)
node_a = NodePath("../rigids/RigidBody2D4")
node_b = NodePath("../rigids/RigidBody2D5")

[node name="PinJoint2D5" type="PinJoint2D" parent="."]
position = Vector2(0, 99)
node_a = NodePath("../rigids/RigidBody2D5")
node_b = NodePath("../rigids/RigidBody2D6")

[node name="PinJoint2D6" type="PinJoint2D" parent="."]
position = Vector2(0, 117)
node_a = NodePath("../rigids/RigidBody2D6")
node_b = NodePath("../rigids/RigidBody2D7")

[node name="PinJoint2D7" type="PinJoint2D" parent="."]
position = Vector2(0, 135)
node_a = NodePath("../rigids/RigidBody2D7")
node_b = NodePath("../rigids/RigidBody2D8")

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["piece"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_fmf5u")

[node name="PinJoint2D8" type="PinJoint2D" parent="."]
position = Vector2(0, 10)
node_a = NodePath("../StaticBody2D")
node_b = NodePath("../rigids/RigidBody2D")

[node name="PinJoint2D9" type="PinJoint2D" parent="."]
position = Vector2(0, 153)
node_a = NodePath("../rigids/RigidBody2D8")

[node name="rigids" type="Node2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="rigids" groups=["piece"]]
position = Vector2(0, 18)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D"]
texture = ExtResource("1_jhya2")

[node name="RigidBody2D2" type="RigidBody2D" parent="rigids" groups=["piece"]]
position = Vector2(0, 36)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D2"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D2"]
texture = ExtResource("1_jhya2")

[node name="RigidBody2D3" type="RigidBody2D" parent="rigids" groups=["piece"]]
position = Vector2(0, 54)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D3"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D3"]
texture = ExtResource("1_jhya2")

[node name="RigidBody2D4" type="RigidBody2D" parent="rigids" groups=["piece"]]
position = Vector2(0, 72)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D4"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D4"]
texture = ExtResource("1_jhya2")

[node name="RigidBody2D5" type="RigidBody2D" parent="rigids" groups=["piece"]]
position = Vector2(0, 90)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D5"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D5"]
texture = ExtResource("1_jhya2")

[node name="RigidBody2D6" type="RigidBody2D" parent="rigids" groups=["piece"]]
position = Vector2(0, 108)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D6"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D6"]
texture = ExtResource("1_jhya2")

[node name="RigidBody2D7" type="RigidBody2D" parent="rigids" groups=["piece"]]
position = Vector2(0, 126)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D7"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D7"]
texture = ExtResource("1_jhya2")

[node name="RigidBody2D8" type="RigidBody2D" parent="rigids" groups=["piece"]]
position = Vector2(0, 144)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D8"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D8"]
texture = ExtResource("1_jhya2")

[node name="Marker2D" type="Marker2D" parent="rigids/RigidBody2D8"]
position = Vector2(0, 19)
gizmo_extents = 33.8

[node name="Area2D" type="Area2D" parent="rigids/RigidBody2D8"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D8/Area2D"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_ubtu3")

[node name="Killer" type="Area2D" parent="."]
position = Vector2(0, -30)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killer"]
shape = SubResource("RectangleShape2D_lvhlt")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(2, 2)
texture = ExtResource("5_eepxp")

[node name="wallLeft" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="wallLeft"]
position = Vector2(-23.7, 0)
shape = SubResource("RectangleShape2D_uifs6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wallLeft"]
position = Vector2(25, 0)
shape = SubResource("RectangleShape2D_uifs6")

[connection signal="body_entered" from="rigids/RigidBody2D8/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Killer" to="." method="_on_killer_body_entered"]
